Remove "Edit Details" page, Adjust header font size to try avoid text spilling over with some fonts, Add eol-style native to a few files
git-svn-id: svn://svn.eoserv.net/webcp/trunk@515 da1c5d5e-72c9-4536-8af9-af1c9134b0e6

--- a/tpl/green/style.css
+++ b/tpl/green/style.css
@@ -114,7 +114,7 @@ a:hover
 	padding:1px 0;
 	display:block;
 	text-decoration:none;
-	font-size:125%;
+	font-size:115%;
 	font-weight:bold;
 }
 
